# Kiview

./: .com.nyre.kiview.json  .gitignore  CMakeLists.txt  CNAME  Install.sh  Messages.sh  README.md  com.nyre.kiview.appdata.xml  com.nyre.kiview.desktop  com.nyre.kiview.json  com.nyre.kiview.xml  io.github.nyre221.kiview.json  org.kde.kiview.appdata.xml  org.kde.kiview.desktop  org.kde.kiview.json  requirements(DEV ONLY).txt  requirements.txt
LICENSES/: BSD-2-Clause.txt
extraStuff/: BuildFlatpak.txt
icons/: CMakeLists.txt
po/: kiview.pot  mergePoCommand.txt
po/it/: kiview.po
po/nl/: kiview.po
src/: CMakeLists.txt  com.nyre.kiview.appdata.xml  containerviewer.cpp  containerviewer.h  contentmanager.cpp  contentmanager.h  documentviewer.cpp  documentviewer.h  dolphinbridge.cpp  dolphinbridge.h  imageviewer.cpp  imageviewer.h  io.github.nyre221.kiview.appdata.xml  io.github.nyre221.kiview.desktop  main.cpp  resources.qrc  textviewer.cpp  textviewer.h  videoviewer.cpp  videoviewer.h
src/contents/ui/: ContainerViewerUI.qml  DocumentViewerUi.qml  DocumentViewerUi_deprecated.qml  FallbackViewerUi.qml  ImageViewerUi.qml  InfoDialog.qml  NavButtons.qml  OpenAppButton.qml  TestComponent.qml  TextViewerUi.qml  VideoViewerUi.qml  VideoViewerUi_original.qml  ViewersLoader.qml  ViewersLoader_deprecated.qml  main.qml
